--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -599,7 +599,7 @@
                         <td>
                           <input type="text" class="form-control" id="newClientName" name="newClientName" value = "<%= result.client[0].clientName %>" required readonly>
                         </td>
-                        <td style="width: 5%" class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientName" value="edit"></input>
                           <input type="hidden" id="updateClientName" value="Save"></input>
                         </td>
@@ -639,7 +639,7 @@
                                 <%- list %>
                             </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editAgentAbbrev" value="edit"></input>
                           <input type="hidden" id="updateAgentAbbrev" value="Save"></input>
                         </td>
@@ -649,7 +649,7 @@
                         <td class="align-middle">
                             <input type="text" class="form-control" id="clientPhone" name="clientPhone" value = "<%= result.client[0].clientPhone %>" required readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientPhone" value="edit"></input>
                           <input type="hidden" id="updateClientPhone" value="Save"></input>
                         </td>
@@ -659,7 +659,7 @@
                         <td class="align-middle">
                           <input type="name" class="form-control" id="clientFax" name="clientFax" value = "<%= result.client[0].clientFax %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientFax" value="edit"></input>
                           <input type="hidden" id="updateClientFax" value="Save"></input>
                         </td>
@@ -669,7 +669,7 @@
                         <td class="align-middle">
                           <input type="name" class="form-control" id="clientAddress1" name="clientAddress1" value = "<%= result.client[0].clientAddress1.addr %>" required readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress1" value="edit"></input>
                           <input type="hidden" id="updateClientAddress1" value="Save"></input>
                         </td>
@@ -691,7 +691,7 @@
                             <%- address1List %>
                           </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress1type" value="edit"></input>
                           <input type="hidden" id="updateClientAddress1type" value="Save"></input>
                         </td>
@@ -700,7 +700,7 @@
                         <td class="align-middle">
                           <input type="name" class="form-control" id="clientAddress2" name="clientAddress2" value = "<%= result.client[0].clientAddress2.addr %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress2" value="edit"></input>
                           <input type="hidden" id="updateClientAddress2" value="Save"></input>
                         </td>
@@ -728,7 +728,7 @@
                             <%- address2List %>
                           </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress2type" value="edit"></input>
                           <input type="hidden" id="updateClientAddress2type" value="Save"></input>
                         </td>
@@ -738,7 +738,7 @@
                         <td class="align-middle">
                           <input type="name" class="form-control" id="clientAddress3" name="clientAddress3" value = "<%= result.client[0].clientAddress3.addr %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress3" value="edit"></input>
                           <input type="hidden" id="updateClientAddress3" value="Save"></input>
                         </td>
@@ -766,7 +766,7 @@
                             <%- address3List %>
                           </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress3type" value="edit"></input>
                           <input type="hidden" id="updateClientAddress3type" value="Save"></input>
                         </td>
@@ -776,7 +776,7 @@
                         <td class="align-middle">
                           <input type="name" class="form-control" id="clientAddress4" name="clientAddress4" value = "<%= result.client[0].clientAddress4.addr %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress4" value="edit"></input>
                           <input type="hidden" id="updateClientAddress4" value="Save"></input>
                         </td>
@@ -804,7 +804,7 @@
                             <%- address4List %>
                           </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientAddress4type" value="edit"></input>
                           <input type="hidden" id="updateClientAddress4type" value="Save"></input>
                         </td>
@@ -814,7 +814,7 @@
                         <td class="align-middle">
                           <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" value = "<%= result.client[0].clientEmail1 %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientEmail1" value="edit"></input>
                           <input type="hidden" id="updateClientEmail1" value="Save"></input>
                         </td>
@@ -824,7 +824,7 @@
                         <td class="align-middle">
                           <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" value = "<%= result.client[0].clientEmail2 %>" readonly>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientEmail2" value="edit"></input>
                           <input type="hidden" id="updateClientEmail2" value="Save"></input>
                         </td>
@@ -857,7 +857,7 @@
                           %>
                           <%- productList %>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editProducts" value="edit"></input>
                           <input type="hidden" id="updateProducts" value="Save"></input>
                         </td>
@@ -867,7 +867,7 @@
                         <td class="align-middle">
                           <textarea class="form-control" id="clientNotes" name="clientNotes" rows="3" readonly><%=result.client[0].clientNotes %></textarea>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientNotes" value="edit"></input>
                           <input type="hidden" id="updateClientNotes" value="Save"></input>
                         </td>
@@ -889,7 +889,7 @@
                             <%- statusList %>
                           </select>
                         </td>
-                        <td class="align-middle" style="text-align:center">
+                        <td style="width: 5%; text-align:center" class="align-middle">
                           <input type="button" id="editClientStatus" value="edit"></input>
                           <input type="hidden" id="updateClientStatus" value="Save"></input>
                         </td>
