--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -34,132 +34,130 @@
 <!-- Card Portion for Dashboards -->
 
         <div class="card-deck">
-          <div class="card">
-            <div class="card-header"><strong>Monthly Visit Count - Month of (Insert Month Here) (Insert Year Here)</strong></div>
-            <div class="card-body">
-              <div class="container">
-                <canvas id="monthlyVisitCountDash" height="250"></canvas>
-                <script>
-                      var ctx = document.getElementById("monthlyVisitCountDash");
-                      var monthlyVisitCountDash = new Chart(ctx, {
-                          type: 'horizontalBar',
-                          data: {
-                              labels: ["JV", "FB", "DG", "RPL", "JP", "KJ"],
-                              datasets: [{
-                                  label: 'Visits',
-                                  data: [5, 3, 5, 6, 4, 6],
-                                  backgroundColor: [
-                                    'rgba(255, 99, 132, 0.6)',
-                                    'rgba(54, 162, 235, 0.6)',
-                                    'rgba(255, 206, 86, 0.6)',
-                                    'rgba(75, 192, 192, 0.6)',
-                                    'rgba(255, 159, 64, 0.6)',
-                                    'rgba(255, 99, 132, 0.6)',
-                                  ]
-                              }]
-                          },
-                          options: {
-                              legend: {
-                                display: false,
-                              },
-                              scales: {
-                                xAxes: [{
-                                  ticks: {
-                                    beginAtZero: true,
-                                  }
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mx-0 my-2 px-1">
+            <div class="card h-100">
+              <div class="card-header"><strong>Monthly Visit Count - Month of (Insert Month Here) (Insert Year Here)</strong></div>
+              <div class="card-body">
+                <div class="container">
+                  <canvas id="monthlyVisitCountDash" height="300"></canvas>
+                  <script>
+                        var ctx = document.getElementById("monthlyVisitCountDash");
+                        var monthlyVisitCountDash = new Chart(ctx, {
+                            type: 'horizontalBar',
+                            data: {
+                                labels: ["JV", "FB", "DG", "RPL", "JP", "KJ"],
+                                datasets: [{
+                                    label: 'Visits',
+                                    data: [5, 3, 5, 6, 4, 6],
+                                    backgroundColor: [
+                                      'rgba(255, 99, 132, 0.6)',
+                                      'rgba(54, 162, 235, 0.6)',
+                                      'rgba(255, 206, 86, 0.6)',
+                                      'rgba(75, 192, 192, 0.6)',
+                                      'rgba(255, 159, 64, 0.6)',
+                                      'rgba(255, 99, 132, 0.6)',
+                                    ]
                                 }]
+                            },
+                            options: {
+                                legend: {
+                                  display: false,
+                                },
+                                scales: {
+                                  xAxes: [{
+                                    ticks: {
+                                      beginAtZero: true,
+                                    }
+                                  }]
+                                }
                               }
-                            }
-                      });
-                </script>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header"><strong>Most Visited Customers in the Past 30 Days</strong></div>
-            <div class="card-body">
-              <div class="container">
-                <canvas id="mostVisitedDash" height="250"></canvas>
-                <script>
-                      var ctx = document.getElementById("mostVisitedDash");
-                      var mostVisitedDash = new Chart(ctx, {
-                          type: 'bar',
-                          data: {
-                              labels: ["Customer A", "Customer B", "Customer C", "Customer D", "Customer E", "Customer F"],
-                              datasets: [{
-                                  label: 'Visits',
-                                  data: [10, 8, 8, 7, 5, 2],
-                                  backgroundColor: [
-                                    'rgba(255, 99, 132, 0.6)',
-                                    'rgba(54, 162, 235, 0.6)',
-                                    'rgba(255, 206, 86, 0.6)',
-                                    'rgba(75, 192, 192, 0.6)',
-                                    'rgba(255, 159, 64, 0.6)',
-                                    'rgba(255, 99, 132, 0.6)',
-                                  ]
-                              }]
-                          },
-                          options: {
-                              legend: {
-                                display: false,
-                              },
-                              scales: {
-                                yAxes: [{
-                                  ticks: {
-                                    beginAtZero: true,
-                                  }
-                                }]
-                              }
-                            }
-                      });
-                </script>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="card-deck">
-          <div class="card">
-            <div class="card-header"><strong>Clients Due for Visit</strong></div>
-            <div class="card-body">
-              <div class="table-responsive">
-                  <table class="table table-sm table-borderless table-striped px-2 py-2">
-                    <thead>
-                      <tr>
-                        <th scope="col" class="align-middle">Client</th>
-                        <th scope="col" class="align-middle">Last Visit</th>
-                        <th scope="col" class="align-middle">Days since Last Visit</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>Company X</td>
-                        <td>1/1/2020</td>
-                        <td>14</td>
-                      </tr>
-                      <tr>
-                        <td>Company Y</td>
-                        <td>1/5/2020</td>
-                        <td>12</td>
-                      </tr>
-                      <tr>
-                        <td>Company Z</td>
-                        <td>1/14/2020</td>
-                        <td>8</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                        });
+                  </script>
                 </div>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <div class="card-header">Dashboard 4</div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mx-0 my-2 px-1">
+            <div class="card h-100">
+              <div class="card-header"><strong>Most Visited Customers in the Past 30 Days</strong></div>
+              <div class="card-body">
+                <div class="container">
+                  <canvas id="mostVisitedDash" height="300"></canvas>
+                  <script>
+                        var ctx = document.getElementById("mostVisitedDash");
+                        var mostVisitedDash = new Chart(ctx, {
+                            type: 'bar',
+                            data: {
+                                labels: ["Customer A", "Customer B", "Customer C", "Customer D", "Customer E", "Customer F"],
+                                datasets: [{
+                                    label: 'Visits',
+                                    data: [10, 8, 8, 7, 5, 2],
+                                    backgroundColor: [
+                                      'rgba(255, 99, 132, 0.6)',
+                                      'rgba(54, 162, 235, 0.6)',
+                                      'rgba(255, 206, 86, 0.6)',
+                                      'rgba(75, 192, 192, 0.6)',
+                                      'rgba(255, 159, 64, 0.6)',
+                                      'rgba(255, 99, 132, 0.6)',
+                                    ]
+                                }]
+                            },
+                            options: {
+                                legend: {
+                                  display: false,
+                                },
+                                scales: {
+                                  yAxes: [{
+                                    ticks: {
+                                      beginAtZero: true,
+                                    }
+                                  }]
+                                }
+                              }
+                        });
+                  </script>
+                </div>
+              </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mx-0 my-2 px-1">
+            <div class="card h-100">
+              <div class="card-header"><strong>Clients Due for Visit</strong></div>
+              <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-borderless table-striped px-2 py-2">
+                      <thead>
+                        <tr>
+                          <th scope="col" class="align-middle">Client</th>
+                          <th scope="col" class="align-middle">Last Visit</th>
+                          <th scope="col" class="align-middle">Days since Last Visit</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Company X</td>
+                          <td>1/1/2020</td>
+                          <td>14</td>
+                        </tr>
+                        <tr>
+                          <td>Company Y</td>
+                          <td>1/5/2020</td>
+                          <td>12</td>
+                        </tr>
+                        <tr>
+                          <td>Company Z</td>
+                          <td>1/14/2020</td>
+                          <td>8</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
     </div>
