--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -8,7 +8,7 @@
 </a>
 
 
-<% 
+<%
   var grantEventCreate = false;
   var grantClientCreate = false;
   var grantContactCreate = false;
@@ -16,6 +16,7 @@
   var grantAccountUpdate = false;
   var grantPermissionsUpdate = false;
   var grantImportCreate = false;
+  var grantUserCreate = false;
 
 
 
