--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -2,10 +2,11 @@
 <a href="/home" style="color:white;">CRM SOFTWARE</a>
 </div>
 
-<% 
+<%
   var grantEventRead = false;
   var grantClientRead = false;
   var grantContactRead = false;
+  var grantUserRead
 
   for (i = 0; i < permissions.length; i++){
         if (permissions[i].resource == 'Event' && permissions[i].action == 'Read:any') {
@@ -17,10 +18,22 @@
         if (permissions[i].resource == 'Contact' && permissions[i].action == 'Read:any') {
           grantContactRead = true;
         }
+        if (permissions[i].resource == 'Account' && permissions[i].action == 'Read:any') {
+          grantUserRead = true;
+        }
       }
 %>
 
 <ul class="c-sidebar-nav ps ps--active-y">
+
+  <% if (grantUserRead == true) {%>
+    <li class="c-sidebar-nav-item">
+      <a class="c-sidebar-nav-link" href="/view-users">
+        <i class="c-sidebar-nav-icon cil-user"></i>
+        Users
+      </a>
+    </li>
+  <% } %>
 
 <% if (grantClientRead == true) {%>
   <li class="c-sidebar-nav-item">
@@ -63,7 +76,7 @@
           <a class="c-sidebar-nav-link" href="/report-activity">Activity Report</a>
         </li>
       <% } %>
-      
+
       <% if (grantClientRead == true) {%>
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="/report-client-history">Client History</a>
@@ -89,7 +102,7 @@
           <a class="c-sidebar-nav-link" href="/report-visit-count">Visit Count</a>
         </li>
       <% } %>
-      
+
     </ul>
   </li>
 
