--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -62,11 +62,20 @@
                     <div class="form-group col">
                       <div class="row">
                         <div class="col-12 col-md-auto">
-                          <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+                          <input class="btn-block btn-primary btn-lg" onclick="goBack()" type="submit" value="Submit">
+
+                          <script>
+                          function goBack() {
+                            window.history.back();
+                          }
+                          </script>
+
                         </div>
                       </div>
                     </div>
                   </div>
+
+
         </main>
       </main>
     </div>
