--- a/CRM/views/view-contact.ejs
+++ b/CRM/views/view-contact.ejs
@@ -56,7 +56,6 @@
      document.getElementById('editContactClientID').type = 'hidden';
    } else {window.alert("Only 1 field can be edited at a time");};
    }
-
    document.getElementById('updateContactClientID').onclick = function(){
      isEditing = false;
      document.getElementById('contactClientID').disabled = true;
@@ -334,15 +333,19 @@
                   <tbody>
                     <tr>
                       <th style="width: 15%" scope="col" class="align-middle">First Name:</th>
-                      <td class="align-middle"> <select class="form-control" id="contactFirstName" name="contactFirstName" disabled required><%= result.contact[0].contactFirstName %> </select> </td>
-                      <td style="width: 5%" class="align-middle" style="text-align:center">
+                      <td class="align-middle">
+                        <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" value = "<%= result.contact[0].contactFirstName %>" required readonly>
+                      </td>
+                      <td class="align-middle" style="text-align:center; width:5%">
                         <input type="button" id="editContactFirstName" value="edit"></input>
                         <input type="hidden" id="updateContactFirstName" value="Save"></input>
                       </td>
                     </tr>
                     <tr>
                       <th style="width: 15%" scope="col" class="align-middle">Last Name:</th>
-                      <td class="align-middle"> <select class="form-control" id="contactLastName" name="contactLastName" disabled required><%= result.contact[0].contactLastName %> </select> </td>
+                      <td class="align-middle">
+                        <input type="text" class="form-control" id="contactLastName" name="contactLastName" value = "<%= result.contact[0].contactLastName %>" required readonly>
+                      </td>
                       <td class="align-middle" style="text-align:center">
                         <input type="button" id="editContactLastName" value="edit"></input>
                         <input type="hidden" id="updateContactLastName" value="Save"></input>
